<ui version="4.0" >
 <class>WengoPhoneWindow</class>
 <widget class="QMainWindow" name="WengoPhoneWindow" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>333</width>
    <height>544</height>
   </rect>
  </property>
  <property name="windowTitle" >
   <string>PyWengoPhone</string>
  </property>
  <widget class="QWidget" name="centralWidget" >
   <property name="autoFillBackground" >
    <bool>true</bool>
   </property>
   <layout class="QVBoxLayout" >
    <property name="margin" >
     <number>0</number>
    </property>
    <property name="spacing" >
     <number>0</number>
    </property>
    <item>
     <widget class="QFrame" name="profileBarFrame" />
    </item>
    <item>
     <widget class="QFrame" name="frame" >
      <property name="frameShape" >
       <enum>QFrame::NoFrame</enum>
      </property>
      <property name="frameShadow" >
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" >
       <property name="margin" >
        <number>0</number>
       </property>
       <property name="spacing" >
        <number>0</number>
       </property>
       <item row="1" column="0" >
        <widget class="QTabWidget" name="tabWidget" >
         <property name="autoFillBackground" >
          <bool>false</bool>
         </property>
         <property name="currentIndex" >
          <number>0</number>
         </property>
         <widget class="QWidget" name="tabContactList" >
          <attribute name="title" >
           <string>Contacts</string>
          </attribute>
         </widget>
         <widget class="QWidget" name="tabHistory" >
          <attribute name="title" >
           <string>History</string>
          </attribute>
         </widget>
         <widget class="QWidget" name="tabDialpad" >
          <attribute name="title" >
           <string>Dialpad</string>
          </attribute>
         </widget>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QFrame" name="callBarFrame" >
      <property name="minimumSize" >
       <size>
        <width>16</width>
        <height>65</height>
       </size>
      </property>
      <property name="maximumSize" >
       <size>
        <width>16777215</width>
        <height>65</height>
       </size>
      </property>
      <property name="frameShape" >
       <enum>QFrame::NoFrame</enum>
      </property>
      <property name="frameShadow" >
       <enum>QFrame::Raised</enum>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QFrame" name="configPanelFrame" >
      <property name="sizePolicy" >
       <sizepolicy>
        <hsizetype>5</hsizetype>
        <vsizetype>0</vsizetype>
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar" >
   <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
     <width>333</width>
     <height>25</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuContacts" >
    <property name="title" >
     <string>&amp;Contacts</string>
    </property>
    <addaction name="actionAddContact" />
    <addaction name="separator" />
    <addaction name="actionShowHideOfflineContacts" />
    <addaction name="actionShowHideContactGroups" />
   </widget>
   <widget class="QMenu" name="menuActions" >
    <property name="title" >
     <string>&amp;Actions</string>
    </property>
    <addaction name="actionCreateConferenceCall" />
    <addaction name="separator" />
    <addaction name="actionSendSms" />
    <addaction name="separator" />
   </widget>
   <widget class="QMenu" name="menuSettings" >
    <property name="title" >
     <string>&amp;Tools</string>
    </property>
    <widget class="QMenu" name="menuToolbar" >
     <property name="title" >
      <string>Toolbar</string>
     </property>
     <addaction name="actionToolBarTextUnderIcons" />
     <addaction name="actionToolBarIconsOnly" />
     <addaction name="actionToolBarHidden" />
    </widget>
    <widget class="QMenu" name="menuClearHistory" >
     <property name="title" >
      <string>Clear &amp;History</string>
     </property>
     <property name="icon" >
      <iconset/>
     </property>
     <addaction name="actionClearOutgoingCalls" />
     <addaction name="actionClearIncomingCalls" />
     <addaction name="actionClearMissedCalls" />
     <addaction name="actionClearRejectedCalls" />
     <addaction name="actionClearChatSessions" />
     <addaction name="actionClearSms" />
     <addaction name="separator" />
     <addaction name="actionClearAll" />
    </widget>
    <addaction name="actionOpenChatWindow" />
    <addaction name="actionShowFileTransfer" />
    <addaction name="menuToolbar" />
    <addaction name="separator" />
    <addaction name="actionToggleVideo" />
    <addaction name="actionShowConfig" />
    <addaction name="separator" />
    <addaction name="menuClearHistory" />
   </widget>
   <widget class="QMenu" name="menuHelp" >
    <property name="title" >
     <string>&amp;Help</string>
    </property>
    <addaction name="actionShowWengoForum" />
    <addaction name="actionWengoFAQ" />
    <addaction name="separator" />
    <addaction name="actionShowAbout" />
   </widget>
   <widget class="QMenu" name="menuWengo" >
    <property name="title" >
     <string>File</string>
    </property>
    <addaction name="actionMyProfiles" />
    <addaction name="actionMyAccounts" />
    <addaction name="actionLogOff" />
    <addaction name="separator" />
    <addaction name="actionShowWengoAccount" />
    <addaction name="actionWengoServices" />
    <addaction name="separator" />
    <addaction name="actionClose" />
    <addaction name="actionQuit" />
   </widget>
   <addaction name="menuWengo" />
   <addaction name="menuContacts" />
   <addaction name="menuActions" />
   <addaction name="menuSettings" />
   <addaction name="menuHelp" />
  </widget>
  <widget class="QStatusBar" name="statusBar" />
  <widget class="QToolBar" name="toolBar" >
   <property name="contextMenuPolicy" >
    <enum>Qt::CustomContextMenu</enum>
   </property>
   <property name="windowTitle" >
    <string>ToolBar</string>
   </property>
   <property name="movable" >
    <bool>false</bool>
   </property>
   <property name="orientation" >
    <enum>Qt::Horizontal</enum>
   </property>
   <property name="iconSize" >
    <size>
     <width>32</width>
     <height>32</height>
    </size>
   </property>
   <property name="toolButtonStyle" >
    <enum>Qt::ToolButtonTextUnderIcon</enum>
   </property>
   <attribute name="toolBarArea" >
    <number>4</number>
   </attribute>
   <addaction name="actionAddContact" />
   <addaction name="actionCreateConferenceCall" />
   <addaction name="actionSendSms" />
  </widget>
  <action name="actionShowWengoAccount" >
   <property name="enabled" >
    <bool>false</bool>
   </property>
   <property name="text" >
    <string>View My @company@ Account...</string>
   </property>
  </action>
  <action name="actionClose" >
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>&amp;Close</string>
   </property>
   <property name="shortcut" >
    <string>Ctrl+W</string>
   </property>
  </action>
  <action name="actionShowWengoForum" >
   <property name="text" >
    <string>@company@ &amp;Forum...</string>
   </property>
  </action>
  <action name="actionShowAbout" >
   <property name="text" >
    <string>&amp;About...</string>
   </property>
  </action>
  <action name="actionAddContact" >
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/iconbar/add_contact.png</iconset>
   </property>
   <property name="text" >
    <string>Add &amp;Contact...</string>
   </property>
   <property name="iconText" >
    <string>Add</string>
   </property>
   <property name="toolTip" >
    <string>Add Contact</string>
   </property>
  </action>
  <action name="actionShowConfig" >
   <property name="text" >
    <string>&amp;Configuration...</string>
   </property>
  </action>
  <action name="actionSendSms" >
   <property name="enabled" >
    <bool>false</bool>
   </property>
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/iconbar/sms.png</iconset>
   </property>
   <property name="text" >
    <string>Send SMS...</string>
   </property>
   <property name="iconText" >
    <string>SMS</string>
   </property>
   <property name="toolTip" >
    <string>Send SMS</string>
   </property>
  </action>
  <action name="actionMyProfiles" >
   <property name="text" >
    <string>My &amp;Profiles</string>
   </property>
   <property name="iconText" >
    <string>My Profiles</string>
   </property>
   <property name="toolTip" >
    <string>My Profiles</string>
   </property>
  </action>
  <action name="actionCreateConferenceCall" >
   <property name="enabled" >
    <bool>false</bool>
   </property>
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/iconbar/conference.png</iconset>
   </property>
   <property name="text" >
    <string>Start &amp;Conference...</string>
   </property>
   <property name="iconText" >
    <string>Conference</string>
   </property>
   <property name="toolTip" >
    <string>Start Conference</string>
   </property>
  </action>
  <action name="actionWengoFAQ" >
   <property name="text" >
    <string>@company@ &amp;Wiki/FAQ...</string>
   </property>
  </action>
  <action name="actionWengoServices" >
   <property name="text" >
    <string>Learn more about @company@ Services...</string>
   </property>
  </action>
  <action name="actionShowHideOfflineContacts" >
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>Show/Hide Unavailable &amp;Contacts</string>
   </property>
  </action>
  <action name="actionClearChatSessions" >
   <property name="text" >
    <string>&amp;Chat Sessions</string>
   </property>
  </action>
  <action name="actionClearAll" >
   <property name="text" >
    <string>&amp;All</string>
   </property>
  </action>
  <action name="actionSearchWengoContact" >
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/iconbar/search_contact.png</iconset>
   </property>
   <property name="text" >
    <string>&amp;Find Contact...</string>
   </property>
   <property name="iconText" >
    <string>Search</string>
   </property>
   <property name="toolTip" >
    <string>Find @company@ Contacts</string>
   </property>
  </action>
  <action name="actionAcceptCall" >
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>&amp;Accept</string>
   </property>
  </action>
  <action name="actionHangUpCall" >
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>&amp;HangUp</string>
   </property>
  </action>
  <action name="actionHoldResumeCall" >
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>&amp;Hold/Resume</string>
   </property>
  </action>
  <action name="actionShowHideContactGroups" >
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>Show/Hide &amp;Groups</string>
   </property>
  </action>
  <action name="actionLogOff" >
   <property name="text" >
    <string>Log &amp;Off...</string>
   </property>
   <property name="iconText" >
    <string>Log Off</string>
   </property>
   <property name="toolTip" >
    <string>Log Off</string>
   </property>
  </action>
  <action name="actionOpenChatWindow" >
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/iconbar/chat.png</iconset>
   </property>
   <property name="text" >
    <string>Show &amp;Chat Window</string>
   </property>
   <property name="iconText" >
    <string>Show Chat Window</string>
   </property>
   <property name="toolTip" >
    <string>Show Chat Window</string>
   </property>
  </action>
  <action name="actionClearOutgoingCalls" >
   <property name="text" >
    <string>&amp;Outgoing Calls</string>
   </property>
  </action>
  <action name="actionClearIncomingCalls" >
   <property name="text" >
    <string>&amp;Incoming Calls</string>
   </property>
  </action>
  <action name="actionClearMissedCalls" >
   <property name="text" >
    <string>&amp;Missed Calls</string>
   </property>
  </action>
  <action name="actionToggleVideo" >
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>Enable/Disable &amp;Video Calls</string>
   </property>
  </action>
  <action name="actionShowVolumePanel" >
   <property name="checkable" >
    <bool>false</bool>
   </property>
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/statusbar/audio_status_ok.png</iconset>
   </property>
   <property name="text" >
    <string>Show &amp;Volume Panel</string>
   </property>
  </action>
  <action name="actionClearSms" >
   <property name="text" >
    <string>Short Text &amp;Messages (SMS)</string>
   </property>
  </action>
  <action name="actionShowFileTransfer" >
   <property name="checkable" >
    <bool>false</bool>
   </property>
   <property name="icon" >
    <iconset/>
   </property>
   <property name="text" >
    <string>Show &amp;File Transfer</string>
   </property>
   <property name="shortcut" >
    <string/>
   </property>
  </action>
  <action name="actionClearRejectedCalls" >
   <property name="text" >
    <string>Rejected Calls</string>
   </property>
  </action>
  <action name="actionHideMainWindowToolBar" >
   <property name="checkable" >
    <bool>false</bool>
   </property>
   <property name="text" >
    <string>Hide &amp;ToolBar</string>
   </property>
  </action>
  <action name="actionClear_chat_history" >
   <property name="text" >
    <string>clear chat history</string>
   </property>
  </action>
  <action name="actionQuit" >
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/close_normal.png</iconset>
   </property>
   <property name="text" >
    <string>&amp;Quit</string>
   </property>
   <property name="shortcut" >
    <string>Ctrl+Q</string>
   </property>
   <property name="shortcutContext" >
    <enum>Qt::ApplicationShortcut</enum>
   </property>
  </action>
  <action name="actionToolBarTextUnderIcons" >
   <property name="checkable" >
    <bool>true</bool>
   </property>
   <property name="text" >
    <string>&amp;Text Under Icons</string>
   </property>
  </action>
  <action name="actionToolBarIconsOnly" >
   <property name="checkable" >
    <bool>true</bool>
   </property>
   <property name="text" >
    <string>&amp;Icons Only</string>
   </property>
  </action>
  <action name="actionToolBarHidden" >
   <property name="checkable" >
    <bool>true</bool>
   </property>
   <property name="text" >
    <string>&amp;Hidden</string>
   </property>
  </action>
  <action name="actionMyAccounts" >
   <property name="icon" >
    <iconset resource="../../../resources/wengophone.qrc" >:/pics/config/imaccounts.png</iconset>
   </property>
   <property name="text" >
    <string>My &amp;Accounts</string>
   </property>
  </action>
 </widget>
 <tabstops>
  <tabstop>tabWidget</tabstop>
 </tabstops>
 <resources>
  <include location="../../../resources/wengophone.qrc" />
 </resources>
 <connections/>
</ui>
